<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_background"
    android:orientation="vertical"
    tools:context=".SplashScreen2">

    <ImageView
        android:id="@+id/logoUNS"
        android:layout_width="169dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logoUNS"
        app:srcCompat="@drawable/uns"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/kelompok4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/kelompok4"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="264dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="#000" />

    <TextView
        android:id="@+id/praktik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/praktik"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appmobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/appmobile"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/anggota1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="serif"
            android:text="@string/anggota1"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nim1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/nim1"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/anggota2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="serif"
            android:text="@string/anggota2"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nim2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/nim2"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/anggota3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="serif"
            android:text="@string/anggota3"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nim3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/nim3"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/anggota4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="serif"
            android:text="@string/anggota4"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nim4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/nim4"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>