<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_background"
    android:orientation="vertical"
    tools:context=".StartPage">


    <TextView
        android:id="@+id/katalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/katalog"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider2"
        android:layout_width="275dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="#000" />

    <TextView
        android:id="@+id/obat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/obatherbal"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="67dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/play"
        app:srcCompat="@drawable/play" />
</LinearLayout>