<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_background"
    android:orientation="vertical"
    tools:context=".ObatJamu9">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/btn_back"
                android:textColor="#FFFFFF"
                app:cornerRadius="50dp"
                tools:ignore="TextContrastCheck" />

            <androidx.cardview.widget.CardView
                android:layout_width="390dp"
                android:layout_height="279dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:backgroundTint="#009A62"
                app:cardCornerRadius="25dp" >

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/komposisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/komposisi"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/ptnjk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/ptnjk"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>