<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_background"
    android:orientation="vertical"
    tools:context=".Jamu3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/btn_back"
                android:textColor="#FFFFFF"
                app:cornerRadius="50dp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/kartujamu13"
                    android:layout_width="149dp"
                    android:layout_height="192dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#009A62"
                    app:cardCornerRadius="25dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/kartujamu14"
                    android:layout_width="149dp"
                    android:layout_height="192dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#009A62"
                    app:cardCornerRadius="25dp">

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/kartujamu15"
                    android:layout_width="149dp"
                    android:layout_height="192dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#009A62"
                    app:cardCornerRadius="25dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/kartujamu16"
                    android:layout_width="149dp"
                    android:layout_height="192dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#009A62"
                    app:cardCornerRadius="25dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/kartujamu17"
                    android:layout_width="149dp"
                    android:layout_height="192dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#009A62"
                    app:cardCornerRadius="25dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/kartujamu18"
                    android:layout_width="149dp"
                    android:layout_height="192dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#009A62"
                    app:cardCornerRadius="25dp">

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hal1oht"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hal1jamu"
                    android:textColor="#706D6D"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hal2fito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hal2jamu"
                    android:textColor="#706D6D"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hal3jamu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hal3jamu"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>